# csvtotable

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  setup.cfg
csvtables/: csvtables.py
csvtomd/: csvtomd.py
csvtotable/: csvtotable.py
tests/: sample_data.csv  test_csvtomd.py  test_csvtotable.py
