[tool.poetry]
name = "csvtotable"
version = "0.2.0"
description = ""
authors = ["Demetris Stavrou"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
csvtotable = "csvtotable.csvtotable:cli"