[tool.poetry]
name = "csvtables"
version = "0.2.0"
description = ""
authors = ["Demetris Stavrou"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.scripts]
csvtables = "csvtables.csvtables:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

