[tool.poetry]
name = "csvtables"
version = "0.2.0"
description = "Converts a CSV formatted input to a readable table in text"
readme = "README.md"
authors = ["Demetris Stavrou"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
coverage = "^5.0.1"

[tool.poetry.scripts]
csvtables = "csvtables.csvtables:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

