[metadata]
name = csvtables
version = 0.3.0
author = Demetris Stavrou
description = Convert a CSV formatted input to a readable table in text
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    */tests*

[flake8]
max-line-length = 88
# ignore = I002
# inline-quotes = double
# exclude = .git
